force-app/main/default/objects/Test_Drive__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Drive</relationshipLabel>
    <relationshipName>Test_Drive</relationshipName>
    <type>Lookup</type>
</CustomField>