force-app/main/default/objects/Test_Drive__c/fields/PurchasingScore__c.field-meta.xml
<CustomField>
    <fullName>PurchasingScore__c</fullName>
    <label>Purchasing Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>