force-app/main/default/objects/Test_Drive__c/fields/Recommandation__c.field-meta.xml
<CustomField>
    <fullName>Recommandation__c</fullName>
    <label>Recommandation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>