force-app/main/default/objects/Test_Drive__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Test Drive</relationshipLabel>
    <relationshipName>Test_Drive</relationshipName>
    <type>Lookup</type>
</CustomField>