force-app/main/default/objects/Test_Drive__c/fields/Showroom_Name__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Name__c</fullName>
    <formula>Service_Appointment__r.ServiceTerritory.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Showroom Name</label>
    <type>Text</type>
</CustomField>